fixing spacing for dropdown

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   background-color: #fafafa;
   margin: 0;
-  padding-bottom: 40px;
+  padding-bottom: 100px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
